--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -28,7 +28,7 @@
 <!--                        </p>-->
 <!--                    </a>-->
 <!--                </li>-->
-                <li class="nav-item dropdown">
+                <!-- <li class="nav-item dropdown">
                     <a class="nav-link"   id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <i class="material-icons">notifications</i>
                         <span class="notification">5</span>
@@ -43,7 +43,7 @@
                         <a class="dropdown-item"  >Another Notification</a>
                         <a class="dropdown-item"  >Another One</a>
                     </div>
-                </li>
+                </li> -->
                 <li class="nav-item dropdown shadow show rounded-pill me-4">
                     <a class="nav-link " style="background: #373737;" href="javascript:;" id="navbarDropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                         <i class="material-icons text-white">person</i>
@@ -53,8 +53,9 @@
                         <div class="ripple-container"></div>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownProfile">
-                        <a class="dropdown-item" href="#">Profile<div class="ripple-container"></div></a>
-                        <a class="dropdown-item" href="#">Settings</a>
+                        <a class="dropdown-item" (click)="openDialog()" >Profile<div class="ripple-container"></div></a>
+                        <a class="dropdown-item" (click)="changePassword()" >Change Password<div class="ripple-container"></div></a>
+                        <!-- <a class="dropdown-item" href="#">Settings</a> -->
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" [routerLink]="['sign-in']">Log out</a>
                     </div>
