--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -50,62 +50,22 @@
         <div class="row">
             <div id="carousel" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#carousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#carousel" data-slide-to="1"></li>
+                    <li *ngIf="recipes?.length" data-target="#carousel" data-slide-to="0" class="active"></li>
+                    <li *ngIf="recipes?.length>4" data-target="#carousel" data-slide-to="1"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="1000">
                         <div class="d-none d-lg-block">
-                            <div class="slide-box">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                            <div class="slide-box" *ngIf="recipes?.length">
+                                <img class="mx-3 " *ngFor="let img of recipes | slice:0:4" [src]="imageUrl+img.recipe_pic" alt="First slide">
                             </div>
-                        </div>
-                        <div class="d-none d-md-block d-lg-none">
-                            <div class="slide-box">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                            </div>
-                        </div>
-                        <div class="d-none d-sm-block d-md-none">
-                            <div class="slide-box">
-                                <img src="https://picsum.photos/270/200/?image=0&random" alt="First slide">
-                                <img src="https://picsum.photos/270/200/?image=1&random" alt="First slide">
-                            </div>
-                        </div>
-                        <div class="d-block d-sm-none">
-                            <img class="d-block w-100" src="https://picsum.photos/600/400/?image=0&random" alt="First slide">
                         </div>
                     </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item" data-bs-interval="1000">
                         <div class="d-none d-lg-block">
-                            <div class="slide-box">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
+                            <div class="slide-box" *ngIf="recipes?.length>4">
+                                <img class="mx-3 " *ngFor="let img of recipes | slice:4:8" [src]="imageUrl+img.recipe_pic"  alt="First slide">
                             </div>
-                        </div>
-                        <div class="d-none d-md-block d-lg-none">
-                            <div class="slide-box">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                                <img class="mx-3 " src="assets/img/ecipe.avif" alt="First slide">
-                            </div>
-                        </div>
-                        <div class="d-none d-sm-block d-md-none">
-                            <div class="slide-box">
-                                <img src="https://picsum.photos/270/200/?image=2&random" alt="Second slide">
-                                <img src="https://picsum.photos/270/200/?image=3&random" alt="Second slide">
-                            </div>
-                        </div>
-                        <div class="d-block d-sm-none">
-                            <img class="d-block w-100" src="https://picsum.photos/600/400/?image=1&random" alt="Second slide">
                         </div>
                     </div>
                 </div>
