--- a/src/app/modules/device-management/device-listing/device-listing.component.html
+++ b/src/app/modules/device-management/device-listing/device-listing.component.html
@@ -7,7 +7,11 @@
             <h4 class="card-title">Device Management</h4>
             <p class="card-category">Complete Details of the Devices</p>
             <div class="col-lg-12 text-end place-self-end">
-              <button color="primary" (click)="AddUpdateDevice()" mat-raised-button>
+              <button
+                color="primary"
+                (click)="AddUpdateDevice()"
+                mat-raised-button
+              >
                 <mat-icon>add</mat-icon>
                 Add Device
               </button>
@@ -17,9 +21,10 @@
             <div class="table-responsive">
               <table mat-table [dataSource]="dataSource" matSort class="table">
                 <ng-container matColumnDef="device_id">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>Device Id</th>
+                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                    Device Id
+                  </th>
                   <td mat-cell *matCellDef="let row">
-
                     <span class="font-bold text-primary ms-2">{{
                       row.device_id
                     }}</span>
@@ -37,15 +42,16 @@
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Serial Number
                   </th>
-                  <td mat-cell *matCellDef="let row">{{ row.device_serial }}</td>
+                  <td mat-cell *matCellDef="let row">
+                    {{ row.device_serial }}
+                  </td>
                 </ng-container>
 
-
-                <ng-container matColumnDef="owner">
+                <ng-container matColumnDef="owner_name">
                   <th mat-header-cell *matHeaderCellDef mat-sort-header>
                     Created By
                   </th>
-                  <td mat-cell *matCellDef="let row">{{ row.owner }}</td>
+                  <td mat-cell *matCellDef="let row">{{ row.owner_name }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="action">
@@ -53,28 +59,40 @@
                     Action
                   </th>
                   <td mat-cell *matCellDef="let row">
-                    <mat-icon
-                      class="me-2 pointer position-relative"
-                      color="primary"
-                      style="z-index: 99999"
-                      (click)="AddUpdateDevice(row)"
-                      matTooltipPosition="above"
-                      matTooltipClass="custom-tooltip"
-                      matTooltip="click to edit"
-                      >edit</mat-icon
-                    >
+                    <div  *ngIf="user&&user.user_id == row.owner">
+                      <mat-icon
+                        class="me-2 pointer position-relative"
+                        color="success"
+                        style="z-index: 99999"
+                        (click)="viewMappedDevice(row)"
+                        matTooltipPosition="above"
+                        matTooltipClass="custom-tooltip"
+                        matTooltip="click to view"
+                        >remove_red_eye</mat-icon
+                      >
+                      <mat-icon
+                        class="me-2 pointer position-relative"
+                        color="primary"
+                        style="z-index: 99999"
+                        (click)="AddUpdateDevice(row)"
+                        matTooltipPosition="above"
+                        matTooltipClass="custom-tooltip"
+                        matTooltip="click to edit"
+                        >edit</mat-icon
+                      >
 
-                    <!-- <mat-icon
-                      class="pointer position-relative"
-                      (click)="onDelete(row.user_id)"
-                      style="z-index: 99999"
-                      color="warn"
-                      matTooltipPosition="above"
-                      matTooltipClass="custom-tooltip"
-                      matTooltip="click to delete"
-                      >delete</mat-icon
-                    >
-                  </td> -->
+                      <mat-icon
+                        class="pointer position-relative"
+                        (click)="onDelete(row)"
+                        style="z-index: 99999"
+                        color="warn"
+                        matTooltipPosition="above"
+                        matTooltipClass="custom-tooltip"
+                        matTooltip="click to delete"
+                        >delete</mat-icon
+                      >
+                    </div>
+                  </td>
                 </ng-container>
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
